--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-airbnb": "^2.5.3",
-    "bootstrap": "^3.3.7",
     "jsdom": "^9.9.1",
+    "mocha-multi": "^1.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "^1.0.7",
@@ -48,7 +48,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babelify": "^7.3.0",
-    "bootstrap": "^3.3.7",
     "jsdom": "^9.9.1",
     "mocha": "^5.2.0",
     "react-scripts": "^1.0.7",
